index page and card component updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,15 @@
         text-align: left !important;
     }
 }
+
+.text-collapsible {
+    max-height: 76px;
+    min-height: 76px;
+    overflow: hidden;
+}
+
+.text-collapsible-active {
+    height: 100%;
+    min-height: 76px;
+    overflow: hidden;
+}
